# VioReplay-Skills

./: .gitignore  README.md
.github/workflows/: release.yml
docs/plans/: 2026-02-25-phase5-implementation.md  2026-02-25-phase5-tauri-ui-config-design.md
skill-generator/: .gitignore  Cargo.toml  README.md  build.rs
skill-generator-ui/: index.html  package-lock.json  package.json
skill-generator-ui/src/: App.css  App.tsx
skill-generator-ui/src-tauri/: Cargo.toml  tauri.conf.json
skill-generator-ui/src-tauri/src/: lib.rs  main.rs
skill-generator/benches/: event_capture.rs
skill-generator/docs/: API.md  ARCHITECTURE.md
skill-generator/src/: lib.rs  main.rs
skill-generator/src/analysis/: intent_binding.rs  kinematic_segmentation.rs  mod.rs  rdp_simplification.rs
skill-generator/src/app/: cli.rs  config.rs  mod.rs
skill-generator/src/capture/: accessibility.rs  cursor.rs  event_tap.rs  mod.rs  ring_buffer.rs  types.rs
skill-generator/src/chunking/: action_clustering.rs  context_stack.rs  goms_detector.rs  mod.rs
skill-generator/src/codegen/: markdown_builder.rs  mod.rs  skill_compiler.rs  validation.rs
skill-generator/src/semantic/: context_reconstruction.rs  http_retry.rs  mod.rs  null_handler.rs  screenshot.rs  screenshot_analysis.rs  vision_fallback.rs
skill-generator/src/synthesis/: llm_semantic_synthesis.rs  mod.rs  selector_ranking.rs  variable_extraction.rs
skill-generator/src/time/: mod.rs  timebase.rs
skill-generator/src/verification/: hoare_triple_generator.rs  mod.rs  postcondition_extractor.rs
skill-generator/src/workflow/: generator.rs  mod.rs  recording.rs
skill-generator/tests/: capture_pipeline_test.rs  e2e_native_workflows_test.rs  quality_metrics_test.rs  skill_generation_e2e_test.rs  stress_and_performance_test.rs  workflow_integration_test.rs
