[package]
name = "skill-generator-ui"
version = "0.1.0"
description = "Skill Generator - Record and generate Claude Code SKILL.md files"
authors = ["Aezi"]
edition = "2021"

[lib]
name = "skill_generator_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Skill generator core library
skill_generator = { path = "../../skill-generator" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Time handling
chrono = "0.4"

# Directories for config
dirs = "5"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

