[package]
name = "skill-generator-ui"
version = "0.1.0"
description = "Skill Generator - Record and generate Claude Code SKILL.md files"
authors = ["Aezi"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "skill_generator_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Skill generator core library
skill_generator = { path = "../../skill-generator" }

# Async runtime (only rt-multi-thread needed for Runtime::new())
tokio = { version = "1", features = ["rt-multi-thread"] }

# Time handling
chrono = "0.4"

# Directories for config
dirs = "5"

# HTTP client for LLM API calls (rustls avoids duplicate core-foundation from native-tls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# TOML parsing for config import
toml = "0.8"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

